[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Clock/Clock.gd" type="Script" id=1]
[ext_resource path="res://scenes/Clock/TimerDraw/TimerDraw.tscn" type="PackedScene" id=2]

[node name="Clock" type="Control"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
clock_color = Color( 0.941176, 0.152941, 0, 1 )
shadow_color = Color( 0, 0, 0, 0.54902 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="TimerDraw2" parent="." instance=ExtResource( 2 )]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -8.0
margin_top = 4.0
margin_right = -8.0
margin_bottom = 4.0

[node name="TimerDraw" parent="." instance=ExtResource( 2 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
